--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,1 +1,21 @@
-.Button {}
+.Button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background 0.4s, color 0.4s, transform 0.2s ease, box-shadow 0.2s ease;
+  background: linear-gradient(45deg, #fbc02d, #f57f17);
+  color: white;
+  user-select: none; /* Evita que el contenido sea seleccionable */
+}
+
+.Button:hover {
+  background: linear-gradient(45deg, #f57f17, #fbc02d);
+}
+
+.Button:active {
+  transform: translateY(2px); /* Desplazamiento hacia abajo al hacer clic */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Sombra más pronunciada al hacer clic */
+}
