--- a/src/components/TodoCheckButton/TodoCheckButton.module.css
+++ b/src/components/TodoCheckButton/TodoCheckButton.module.css
@@ -1,6 +1,7 @@
 .TodoCheckButton {
     background: none;
     border: 2px solid #333;
+    border-radius: .5rem;
     width: 30px;
     height: 30px;
     font-size: 18px;
